Update cspell extension config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,39 +36,5 @@
         "**/install": true,
         "**/log": true
     },
-    "cSpell.words": [
-        "RTPS",
-        "athackst",
-        "autopep",
-        "cmake",
-        "cppcheck",
-        "cpplint",
-        "DCMAKE",
-        "deque",
-        "devcontainer",
-        "ints",
-        "noqa",
-        "pytest",
-        "rclcpp",
-        "rclpy",
-        "repos",
-        "rosdep",
-        "rosdistro",
-        "rosidl",
-        "RTPS",
-        "uncrustify",
-        "Wextra",
-        "Wpedantic",
-        "xmllint"
-    ],
-    "cSpell.allowCompoundWords": true,
-    "cSpell.ignorePaths": [
-        "**/package-lock.json",
-        "**/node_modules/**",
-        "**/vscode-extension/**",
-        "**/.git/objects/**",
-        ".vscode",
-        ".vscode-insiders",
-        ".devcontainer/devcontainer.json"
-    ]
+    "cSpell.enabled": true
 }
