Link image to repo

--- a/.devcontainer/base/Dockerfile
+++ b/.devcontainer/base/Dockerfile
@@ -1,5 +1,6 @@
 # build command: docker build --tag ghcr.io/ubcsailbot/vscode_ros2_workspace/base:ros_eloquent-ompl_1_5_0_python3 .
 FROM ros:eloquent-ros-base-bionic
+LABEL org.opencontainers.image.source https://github.com/UBCSailbot/vscode_ros2_workspace
 
 # install OMPL
 COPY ./install-ompl-ubuntu-python3.sh /ompl/
