--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,11 @@
         "*.xacro": "xml"
     },
     "python.analysis.extraPaths": [
-        "/opt/ros/foxy/lib/python3.8/site-packages/"
+        "/opt/ros/eloquent/lib/python3.6/site-packages/"
     ],
     // Autocomplete from ros python packages
     "python.autoComplete.extraPaths": [
-        "/opt/ros/foxy/lib/python3.8/site-packages/"
+        "/opt/ros/eloquent/lib/python3.6/site-packages/"
     ],
     // Environment file lets vscode find python files within workspace
     "python.envFile": "${workspaceFolder}/.env",
@@ -24,17 +24,34 @@
     ],
     "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
     "C_Cpp.formatting": "Disabled",
-    "uncrustify.configPath.linux": "/opt/ros/foxy/lib/python3.8/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
+    "uncrustify.configPath.linux": "/opt/ros/eloquent/lib/python3.6/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
     "[cpp]": {
         "editor.defaultFormatter": "zachflower.uncrustify"
     },
     "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "**/*.code-search": true,
         "**/build": true,
         "**/install": true,
         "**/log": true
     },
-    "cSpell.enabled": true
+    "cSpell.enabled": true,
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#19488d",
+        "activityBar.activeBorder": "#dd4181",
+        "activityBar.background": "#19488d",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#dd4181",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "sash.hoverBorder": "#19488d",
+        "statusBar.background": "#113262",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#19488d",
+        "statusBarItem.remoteBackground": "#113262",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#113262",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#11326299",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.remoteColor": "#113262"
 }
