Update devcontainer image files

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM althack/ros2:foxy-dev 
+FROM ghcr.io/ubcsailbot/vscode_ros2_workspace/dev:latest
 
 # ** [Optional] Uncomment this section to install additional packages. **
 #
@@ -12,6 +12,5 @@ FROM althack/ros2:foxy-dev
 #    && rm -rf /var/lib/apt/lists/*
 # ENV DEBIAN_FRONTEND=dialog
 
-# Set up auto-source of workspace for ros user
-ARG WORKSPACE
-RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> /home/ros/.bashrc
+# Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
+COPY config ${HOME}
