Rename default build task to avoid ctrl+shift+b conflict

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
       "request": "launch",
       "program": "${workspaceFolder}/install/lib/${input:package}/${input:program}",
       "args": [],
-      "preLaunchTask": "build",
+      "preLaunchTask": "Build",
       "stopAtEntry": true,
       "cwd": "${workspaceFolder}",
       "externalConsole": false,
