--- a/.devcontainer/dev/Dockerfile
+++ b/.devcontainer/dev/Dockerfile
@@ -80,3 +80,6 @@ RUN git clone https://github.com/UBCSailbot/local-pathfinding.git src/local-path
 RUN git clone https://github.com/UBCSailbot/boat_controller.git src/boat_controller
 RUN git clone https://github.com/UBCSailbot/sailbot-msg.git src/sailbot-msg
 RUN /bin/bash -c "source /opt/ros/${ROS1_DISTRO}/setup.bash; catkin_make"
+
+# ROS 2 workspace setup
+WORKDIR $ROS2_WORKSPACE
