Use dev image as devcontainer base

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
-FROM althack/ros2:foxy-dev
-# FROM ghcr.io/ubcsailbot/vscode_ros2_workspace/dev:latest
+# FROM althack/ros2:foxy-dev
+FROM ghcr.io/ubcsailbot/vscode_ros2_workspace/dev:latest
 
 # ** [Optional] Uncomment this section to install additional packages. **
 #
