--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,17 +1,19 @@
-FROM althack/ros2:foxy-dev 
+# FROM althack/ros2:foxy-dev
+FROM ghcr.io/ubcsailbot/vscode_ros2_workspace/dev:latest
 
 # ** [Optional] Uncomment this section to install additional packages. **
 #
 # ENV DEBIAN_FRONTEND=noninteractive
 # RUN apt-get update \
-#    && apt-get -y install --no-install-recommends <your-package-list-here> \
-#    #
-#    # Clean up
-#    && apt-get autoremove -y \
-#    && apt-get clean -y \
-#    && rm -rf /var/lib/apt/lists/*
-# ENV DEBIAN_FRONTEND=dialog
+#  && apt-get -y install --no-install-recommends \
+#  # Your package list here
+#  # Clean up
+#  && apt-get autoremove -y \
+#  && apt-get clean -y \
+#  && rm -rf /var/lib/apt/lists/*
+# ENV DEBIAN_FRONTEND=
 
-# Set up auto-source of workspace for ros user
-ARG WORKSPACE
-RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> /home/ros/.bashrc
+# Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
+ARG USERNAME=ros
+ARG HOME=/home/$USERNAME
+COPY config ${HOME}
