--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ build/*
 install/*
 log/*
 site/*
+
+# vcstool packages
+src/*
+!src/new_project.repos
+
+# configuration files
+.devcontainer/config/*
+!.devcontainer/config/.gitkeep
