--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "tasks": [
         // Build tasks
         {
-            "label": "build",
+            "label": "Build",
             "detail": "Build workspace (default)",
             "type": "shell",
             "command": "./build.sh",
@@ -44,7 +44,7 @@
             "label": "clean",
             "detail": "Run the clean target",
             "type": "shell",
-            "command": "colcon build --cmake-target clean",
+            "command": "colcon build --merge-install --cmake-target clean",
             "problemMatcher": "$gcc"
         },
         {
@@ -212,14 +212,14 @@
             "label": "import from workspace file",
             "detail": "Use vcs to import modules specified by a workspace/rosinstall file.",
             "type": "shell",
-            "command": "vcs import < src/ros2.repos src",
+            "command": "vcs import < src/new_project.repos src",
             "problemMatcher": []
         },
         {
             "label": "update workspace file",
             "detail": "Use vcs to update repositories in src to workspace file.",
             "type": "shell",
-            "command": "vcs export src > src/ros2.repos",
+            "command": "vcs export src > src/new_project.repos",
             "problemMatcher": []
         },
         {
