Update vscode configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
         "titleBar.activeBackground": "#113262",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#11326299",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.remoteColor": "#113262"
 }
