Write devcontainer documentation

--- a/.github/workflows/build-dev-image.yaml
+++ b/.github/workflows/build-dev-image.yaml
@@ -7,7 +7,7 @@ on:
         description: 'Dev image tag'
         required: false
         type: string
-        default: 'latest'
+        default: 'main'
 
 jobs:
   docker:
