--- a/.github/workflows/lint-docs.yaml
+++ b/.github/workflows/lint-docs.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Lint markdown pages
       uses: nosborn/github-action-markdown-cli@v3.1.0
       with:
-        files: 'README.md'
+        files: 'README.md .devcontainer/'
         config_file: '.markdownlint.json'
 
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
@@ -33,3 +33,4 @@ jobs:
       with:
         config-file: '.markdown-link-check.json'
         file-path: './README.md'
+        folder-path: '.devcontainer'
