Write documentation for devcontainer, update dev image, change line length limit to 120 (#22)
* Add tmux

* Write devcontainer documentation

* Add extensions

* Update dev image tag

* Source personal aliases and functions

* update readme title

* Fix formatting

* Add instructions on how to temporarily add packages

* Change line length limit to 120

* Fix markdownlint errors

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,6 @@
-FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:infra_updates
+FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:add_tmux
 
 # ** [Optional] Uncomment this section to install additional packages. **
-#
 # ENV DEBIAN_FRONTEND=noninteractive
 # RUN apt-get update \
 #  && apt-get -y install --no-install-recommends \
