Disable extension conflicting with my keyboard shorcuts

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,7 @@
 		"smilerobotics.urdf",
 		"streetsidesoftware.code-spell-checker",
 		"twxs.cmake",
-		"yzhang.markdown-all-in-one",
+		// "yzhang.markdown-all-in-one",
 		"zachflower.uncrustify",
 
 		// UBCSailbot
