Resolve deprecated raye dependency (#28)
The repo that we used for libspot (raye pathfinding dependency) just
became deprecated. This causes `sudo apt update` to error, in turn
causing our CI to fail.

What I did
- Updated the `base:raye` dockerfile to use a different repo that works
- Since this image takes 10 hours to build, there isn't a need to update
it, I didn't
- Removed the deprecated repo in the `dev` dockerfile so that `sudo apt
update` is error free
   - Remove this section if `base:raye` is rebuilt

--- a/.devcontainer/dev/Dockerfile
+++ b/.devcontainer/dev/Dockerfile
@@ -1,6 +1,10 @@
 # build using Build Dev Image workflow
 FROM ghcr.io/ubcsailbot/sailbot_workspace/base:raye as builder
 
+# remove deprecated PPA from base:raye image
+# TODO: remove this section once base:raye is rebuilt
+RUN sed -i '$d' /etc/apt/sources.list
+
 # develop configuration based on athackst's image
 # https://github.com/athackst/dockerfiles/blob/main/ros2/eloquent.Dockerfile
 ENV DEBIAN_FRONTEND=noninteractive
