--- a/.devcontainer/dev/Dockerfile
+++ b/.devcontainer/dev/Dockerfile
@@ -105,6 +105,7 @@ RUN mkdir src
 RUN git clone https://github.com/UBCSailbot/raye-local-pathfinding.git src/local-pathfinding
 RUN git clone https://github.com/UBCSailbot/raye-boat-controller.git src/boat_controller
 RUN git clone https://github.com/UBCSailbot/raye-sailbot-msg.git src/sailbot-msg
+RUN chown -R ${USERNAME} src
 RUN /bin/bash -c "source /opt/ros/${ROS1_DISTRO}/setup.bash; catkin_make"
 
 # ROS 2 workspace setup
