Add support for ROS 2 tutorials (#25)
* Do not source ROS 1 by default

* Add useful packages for ROS development

* Update alias descriptions

* Disable extension conflicting with my keyboard shorcuts

* Add note about supported operating systems

* Add ros_tutorials repo

* Use the updated dev image and add tutorial packages

* Add back tutorial dependencies

* Update ros sourcing alias description

* Add tasks to create new package with node

* Rename placeholder repos to *_ex

* Update ROS sourcing

* Comment out ROS tutorial packages by default

* Add error message to srcnew

* Specify task type

* Add back sourcing ROS 2 underlay by default for CI

* Silence ROS_DISTRO warning when running srcraye

* Update main README

* Update raye repository names

* Update raye repo file permissions

* Update commented out section titles

--- a/.devcontainer/dev/Dockerfile
+++ b/.devcontainer/dev/Dockerfile
@@ -28,6 +28,11 @@ RUN apt-get update && apt-get install -y \
   ros-eloquent-launch-testing-ament-cmake \
   ros-eloquent-launch-testing-ros \
   python-autopep8 \
+  # Packages not from athackst's image
+  ros-eloquent-rqt* \
+  ros-eloquent-ros2bag \
+  ros-eloquent-rosbag2-converter-default-plugins \
+  ros-eloquent-rosbag2-storage-default-plugins \
   && rm -rf /var/lib/apt/lists/* \
   && rosdep init || echo "rosdep already initialized" \
   # Update pydocstyle
@@ -97,9 +102,10 @@ RUN chmod +x /sbin/update-bashrc ; chown ros /sbin/update-bashrc ; sync ; /bin/b
 # ROS 1 workspace setup
 WORKDIR $ROS1_WORKSPACE
 RUN mkdir src
-RUN git clone https://github.com/UBCSailbot/local-pathfinding.git src/local-pathfinding
-RUN git clone https://github.com/UBCSailbot/boat_controller.git src/boat_controller
-RUN git clone https://github.com/UBCSailbot/sailbot-msg.git src/sailbot-msg
+RUN git clone https://github.com/UBCSailbot/raye-local-pathfinding.git src/local-pathfinding
+RUN git clone https://github.com/UBCSailbot/raye-boat-controller.git src/boat_controller
+RUN git clone https://github.com/UBCSailbot/raye-sailbot-msg.git src/sailbot-msg
+RUN chown -R ${USERNAME} src
 RUN /bin/bash -c "source /opt/ros/${ROS1_DISTRO}/setup.bash; catkin_make"
 
 # ROS 2 workspace setup
