Split apart ros lint and test workflow

--- a/.github/workflows/lint-ros.yaml
+++ b/.github/workflows/lint-ros.yaml
@@ -1,4 +1,4 @@
-name: ROS - Lint and Test
+name: Lint ROS
 
 on:
   push:
@@ -8,17 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: test
-    runs-on: ubuntu-latest
-    steps:
-      - 
-        name: Checkout code
-        uses: actions/checkout@v3
-      -
-        name: Test
-        uses: ./.github/actions/test/
-
   lint:
     name: ament_${{ matrix.linter }}
     runs-on: ubuntu-latest
