Combine lint workflows

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: Lint Markdown
+name: Lint
 
 on:
   push:
@@ -8,6 +8,23 @@ on:
   workflow_dispatch:
 
 jobs:
+  ros-lint:
+    name: ament_${{ matrix.linter }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+          linter: [cppcheck, cpplint, uncrustify, lint_cmake, xmllint, flake8, pep257]
+    steps:
+      - 
+        name: Checkout code
+        uses: actions/checkout@v3
+      -
+        name: Run linter
+        uses: ./.github/actions/lint/
+        env: 
+          LINTER: ${{ matrix.linter }}
+
   # https://github.com/nosborn/github-action-markdown-cli
   markdownlint:
     runs-on: ubuntu-latest
@@ -15,7 +32,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Lint markdown pages
+    - name: Run linter
       uses: nosborn/github-action-markdown-cli@v3.2.0
       with:
         files: 'README.md .devcontainer/'
@@ -28,7 +45,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Check markdown pages for broken links
+    - name: Run linter
       uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
         config-file: '.markdown-link-check.json'
