--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Test ROS
+name: Test
 
 on:
   push:
@@ -8,8 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: test
+  ros-tests:
     runs-on: ubuntu-latest
     steps:
       - 
