Added initial clang and cmake setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,27 +1,30 @@
 FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:infra_updates
 
 ## Uncomment this section to install the packages used in the ROS 2 tutorials
-# ENV DEBIAN_FRONTEND=noninteractive
-# RUN apt-get update \
-#  && apt-get -y install --no-install-recommends \
-#  # Your package list here
-#  ros-eloquent-turtlesim \
-#  # Clean up
-#  && apt-get autoremove -y \
-#  && apt-get clean -y \
-#  && rm -rf /var/lib/apt/lists/*
-# ENV DEBIAN_FRONTEND=
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update \
+ && apt-get -y install --no-install-recommends \
+ # Your package list here
+ ros-eloquent-turtlesim \
+ # Clean up
+ && apt-get autoremove -y \
+ && apt-get clean -y \
+ && rm -rf /var/lib/apt/lists/*
+ENV DEBIAN_FRONTEND=
 
 ## Uncomment this section to install additional packages
-# ENV DEBIAN_FRONTEND=noninteractive
-# RUN apt-get update \
-#  && apt-get -y install --no-install-recommends \
-#  # Your package list here
-#  # Clean up
-#  && apt-get autoremove -y \
-#  && apt-get clean -y \
-#  && rm -rf /var/lib/apt/lists/*
-# ENV DEBIAN_FRONTEND=
+RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update \
+ && apt-get -y install --no-install-recommends \
+ clang-10 clang-tidy-10 clangd-10 \
+ && update-alternatives --install /usr/bin/clangd clangd /usr/bin/clangd-10 100 \
+ # Your package list here
+ # Clean up
+ && apt-get autoremove -y \
+ && apt-get clean -y \
+ && rm -rf /var/lib/apt/lists/*
+ENV DEBIAN_FRONTEND=
 
 # Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
 ARG USERNAME=ros
