Update VS Code extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,8 @@
 		"awesomektvn.toggle-semicolon",
 		"DavidAnson.vscode-markdownlint",
 		"jeff-hykin.better-cpp-syntax",
-		"johnpapa.vscode-peacock",
+		"bierner.markdown-preview-github-styles",
+		"eamodio.gitlens",
 		"KevinRose.vsc-python-indent",
 		"ms-vsliveshare.vsliveshare",
 		"njpwerner.autodocstring",
