--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,9 +44,10 @@
 
 		// UBCSailbot
 		"awesomektvn.toggle-semicolon",
+		"bierner.markdown-preview-github-styles",
 		"DavidAnson.vscode-markdownlint",
+		"eamodio.gitlens",
 		"jeff-hykin.better-cpp-syntax",
-		"johnpapa.vscode-peacock",
 		"KevinRose.vsc-python-indent",
 		"ms-vsliveshare.vsliveshare",
 		"njpwerner.autodocstring",
