C++ setup mostly done

--- a/.devcontainer/dev/Dockerfile
+++ b/.devcontainer/dev/Dockerfile
@@ -73,17 +73,24 @@ RUN apt-get update \
   && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
 
-# install clang some clang tools
+# install clang, some clang tools, and protobuf for network systems
 RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|sudo apt-key add -
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
-  && apt-get -y install --no-install-recommends\
-  clang-10 clang-tidy-10 clangd-10 \
+  && apt-get -y install --no-install-recommends \
+  clang-10 clang-tidy-10 clangd-10 llvm-10 protobuf-compiler libprotobuf-dev \
   && update-alternatives --install /usr/bin/clangd clangd /usr/bin/clangd-10 100 \
+  # Clean up
   && apt-get autoremove -y \
   && apt-get clean -y \
   && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
+
+# build Boost from source to get the latest version
+RUN wget -O boost_1_80_0.tar.gz https://sourceforge.net/projects/boost/files/boost/1.80.0/boost_1_80_0.tar.gz/download \
+ && tar xzf boost_1_80_0.tar.gz \
+ && cd boost_1_80_0 && ./bootstrap.sh --prefix=/usr/ && ./b2 install \
+ && cd .. && rm -rf boost_1_80_0 && rm -f boost_1_80_0.tar.gz
 
 # install git-delta
 RUN wget https://github.com/dandavison/delta/releases/download/0.14.0/git-delta-musl_0.14.0_amd64.deb
