--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,7 @@
 		"streetsidesoftware.code-spell-checker",
 		"twxs.cmake",
 		// "yzhang.markdown-all-in-one",
-		"zachflower.uncrustify",
+		// "zachflower.uncrustify",
 
 		// UBCSailbot
 		"awesomektvn.toggle-semicolon",
@@ -49,10 +49,11 @@
 		"eamodio.gitlens",
 		"jeff-hykin.better-cpp-syntax",
 		"KevinRose.vsc-python-indent",
+		"llvm-vs-code-extensions.vscode-clangd",
 		"ms-vsliveshare.vsliveshare",
 		"njpwerner.autodocstring",
 		"vscode-icons-team.vscode-icons",
-		"llvm-vs-code-extensions.vscode-clangd"
+		"zxh404.vscode-proto3"
 	],
 	"mounts": [
 		"source=sailbot-new-project-bashhistory,target=/home/ros/commandhistory,type=volume",
