--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          linter: [lint_cmake, xmllint, flake8, pep257]
+          linter: [clang-tidy, lint_cmake, xmllint, flake8, pep257]
     steps:
       - 
         name: Checkout code
