--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 		"--volume=/tmp/.X11-unix:/tmp/.X11-unix"
 	],
 	"containerEnv": {
-		"DISPLAY": "${localEnv:MAC_DOCKER_LOCALHOST}${localEnv:DISPLAY}",
+		"DISPLAY": "${localEnv:MAC_DOCKER_LOCALHOST}${localEnv:DISPLAY}${localEnv:WIN10_DOCKER_DISPLAY_END}",
 		"LIBGL_ALWAYS_SOFTWARE": "1" // Needed for software rendering of opengl
 	},
 	// Set *default* container specific settings.json values on container create.
